--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "next": "15.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "jest-environment-node": "^30.2.0",
     "node-mocks-http": "^1.17.2"
   }
